--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="amount">Amount</string>
+    <string name="converted_amount" >Converted Amount</string>
+
 </resources>
